--- a/packages/sdk-shared/coverage-tests/fixtures/cors_frames/cors.hbs
+++ b/packages/sdk-shared/coverage-tests/fixtures/cors_frames/cors.hbs
@@ -2,7 +2,7 @@
 <html>
 <body>
     <h1>{{ title }}</h1>
-    <iframe src={{ src }}
+    <iframe src="{{ src }}"
         style="display: flex; width: 100%; height: 100%; flex-direction: column;"></iframe>
 </body>
 </html>
