--- a/packages/sdk-shared/coverage-tests/fixtures/cors_frames/cors.hbs
+++ b/packages/sdk-shared/coverage-tests/fixtures/cors_frames/cors.hbs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head lang="en">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
+	<style>
+		body {
+      font-family: 'Roboto', sans-serif;
+		}
+  </style>
+</head>
 <body>
     <h1>Hello, I have a designer cross origin frame</h1>
     <iframe src="{{ src }}" style="display: flex; width: 100%; height: 100%; flex-direction: column;"></iframe>
